web/src/components/Hero/styles.module.css
@import '../../styles/dark-theme.css';
@import '../../styles/media-queries.css';

.base {
  @extend %dark-bg;

  width: 100vw;
  min-height: calc(100vh - 70px);

  position: relative;

  background-color: transparent;
}

.bg {
  object-fit: cover;
  height: 100%;
  width: 100%;
  display: inline-block;
  position: absolute !important;
  pointer-events: none;
  z-index: -1;

  @media(--media-max-large) {
    img {
      object-position: -150px center !important;
    }
  }
}

.content {
  text-align: center;
  padding: 2em 10vw 0;

  @media (min-width: 899px) {
    position: absolute;
    top: calc(35vh - 60px);
    right: 15vw;
    max-width: 596px;
    padding: 0;
  }
}

.heading {
  margin: 0 0 18px;
  display: inline-block;
}

